# mtg-play

./: .gitignore  AGENTS.md  Makefile  README.md  commander-roadmap.md  docker-compose.yml
backend/: .env.example  .gitignore  GAME_ENGINE_MANA.md  Makefile  add_cards.sh  alembic.ini  deck_import.json  import_request.json  main.py  pyproject.toml  simple_deck.json  test_simple_import.sh  text_decklist.txt
backend/alembic/: env.py
backend/alembic/versions/: 145128b0a162_add_game_tables.py  44cbe43b562f_add_deck_id_to_game_room_players.py  5d395a334f2c_add_mana_pool_fields.py  5f1265c61b9a_add_game_state_tables.py  7bcee0718405_initial_setup_with_scryfall_ids.py  add_game_mode.py  cdc2c22e0fb7_add_lands_played_this_turn.py  efb7ab788b45_add_game_logs_table.py
backend/app/: main.py  socket.py
backend/app/core/: auth.py  config.py  database.py  security.py
backend/app/engine/: __init__.py  actions.py  exceptions.py  game_engine.py  land_utils.py  models.py  phases.py
backend/app/models/: __init__.py  deck.py  game.py  game_state.py  user.py
backend/app/repositories/: __init__.py  base.py  deck.py  dependencies.py  game.py  game_state.py  user.py  user_session.py
backend/app/schemas/: card.py  deck.py  deck_card.py  deck_import.py  deck_text_import.py  game.py  game_state.py  simple_import.py  text_import.py  user.py
backend/app/services/: arena_parser.py  (+7 more)
backend/tests/: conftest.py  test_auth.py  test_cache.py  test_cards.py  test_deck_import.py  test_decks.py  test_engine.py  test_game_state.py  test_games.py  test_mana_system.py  test_websocket.py
(+73 files in other folders)
